--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI ML Music Genre Prediction Web App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='stylesheets/bootstrap-v5.3.0.min.css') }}" />
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='stylesheets/index.css') }}" />
 </head>
 
