refactor: add favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI ML Music Genre Prediction Web App</title>
+    <!-- Add the favicon link -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <!-- CSS files -->
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='stylesheets/bootstrap-v5.3.0.min.css') }}" />
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='stylesheets/index.css') }}" />
 </head>
